[package]
name = "olman"
version = "0.1.0"
authors = ["Jordan Mulcahey <snhjordy@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.3.0"
users = "0.9"
getopts = "0.2"
nix = "0.13.0"
utmpx = { path = "utmpx" }
libc = "0.2"
slog = "2.4.1"
slog-syslog = "0.11.0"
regex = "1"
pam-sys = "0.5.6"
pwd = "1.3.0"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"